# edth_drone

./: .dockerignore  AGENTS.md  Cargo.toml  DEPLOY.md  README.md  docker-compose.yml  nats.Dockerfile  t.mjs  vanguard_dump.txt
src/: main.rs
vanguard-control/: Cargo.toml
vanguard-control/src/: engagement.rs  main.rs
vanguard-core/: Cargo.toml
vanguard-core/src/: control.rs  events.rs  interceptor.rs  kalman.rs  lib.rs  position.rs  radar.rs  subjects.rs  threat.rs
vanguard-interceptor/: Cargo.toml
vanguard-interceptor/src/: agent.rs  lib.rs  main.rs  state.rs  subjects.rs
vanguard-map/src/: main.rs
vanguard-orchestrator/: Cargo.toml
vanguard-orchestrator/src/: assignment.rs  lib.rs  main.rs  orchestrator.rs  state.rs  subjects.rs  tracks.rs
vanguard-platform/: Cargo.toml
vanguard-platform/src/: handlers.rs  lib.rs  main.rs  platform.rs  state.rs
vanguard-system-interceptor/src/: cli.rs  main.rs
vanguard-test/: Cargo.toml
vanguard-test/src/: main.rs
webui/: Dockerfile  default.conf.template  index.html  package.json  pnpm-lock.yaml
webui/docker-entrypoint.d/: 40-nats-url.sh
webui/public/: config.js
webui/src/: App.tsx  ControlPanel.tsx  TacticalMap.tsx  geo.ts  index.css  types.ts  useNats.ts
